# orame

./: .gitignore  Cargo.toml  Taskfile.yml  docker-compose.yml  index.html  package.json  tailwind.config.js
.cargo/: config.toml
.husky/: pre-commit
cli/: Taskfile.yml
cli/src/: main.rs
cli/src/fixtures/: mod.rs
cli/src/fixtures/models/: user.rs
client/: Cargo.toml  README.md  Taskfile.yml  Trunk.toml  index.html  package-lock.json  package.json  pnpm-lock.yaml
client/src/: app.postcss  error.rs  global_state.rs  lib.rs
client/src/components/: mod.rs
client/src/components/galaxy/: galaxy.rs  mod.rs  star.rs  utils.rs
client/src/components/planets/: mod.rs
client/src/components/sidenav/: mod.rs
client/src/components/tooltip/: mod.rs
client/src/components/window/: mod.rs
client/src/data/: building.rs  mod.rs  ship.rs
client/src/routes/: mod.rs
client/src/routes/game/: mod.rs
client/src/routes/game/galaxy/: mod.rs
client/src/routes/game/planets/: mod.rs
client/src/routes/game/planets/id/: building.rs  mod.rs  resource_bar.rs  toolbar.rs  ui.rs
client/src/routes/game/planets/id/buildings/: building_tile.rs  mod.rs
client/src/routes/game/planets/id/shipyard/: mod.rs  ship_tile.rs  ship_window.rs
client/src/routes/game/planets/id/toolbar/: building.rs  mod.rs  ui.rs
client/src/routes/portal/: mod.rs
client/src/utils/: classnames.rs  game_wrapper.rs  mod.rs  socket.rs
client/style/: output.css
ogame_core/: Cargo.toml
ogame_core/src/: build_queue.rs  build_time_trait.rs  building_type.rs  coordinates.rs  error.rs  fleet.rs  flight.rs  game.rs  game_config.rs  lib.rs  planet.rs  planet_config.rs  protocol.rs  resources.rs  ship_hangar.rs  ship_type.rs
prisma-cli/: Cargo.toml
prisma-client/: Cargo.toml  Taskfile.yml
prisma-client/prisma/: schema.prisma
prisma-client/src/: fetch_game.rs  lib.rs  save_game.rs
server/: .gitignore  Cargo.toml  Taskfile.yml
server/prisma/: schema.prisma
server/src/: apply_to_game.rs  config.rs  connected_users.rs  db.rs  error.rs  main.rs  socket.rs
server/src/auth/: body.rs  claims.rs  errors.rs  middleware.rs  mod.rs  service.rs
server/src/client/: apply_to_game.rs  flight.rs  handle_msg.rs  mod.rs  send_initial_game.rs
src/: lib.rs  main.rs
src/components/: mod.rs
src/components/galaxy/: mod.rs
src/components/header/: mod.rs
src/components/planets/: mod.rs
src/components/sidenav/: mod.rs  sidenav_item.rs
src/components/window/: mod.rs
src/routes/: mod.rs
src/routes/home/: mod.rs
src/routes/planets/: mod.rs
src/routes/planets/id/: mod.rs  toolbar.rs
src/utils/: classnames.rs  mod.rs  socket.rs
universe_gen/: Cargo.toml
universe_gen/src/: export.rs  generate.rs  main.rs  plot.rs
