[package]
name = "orame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.2", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5.2", features = ["csr", "nightly"] }
leptos_router = { version = "0.5.2", features = ["csr", "nightly"] }
plotters = "0.3.5"
web-sys = { version = "0.3.65", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "HtmlElement"] }
