[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = 'thin'

[workspace]
resolver = "2"

members = [
  "packages/server",
  "packages/prisma-cli",
  "packages/client",
  "packages/cli",
  "packages/prisma-client",
  "packages/ogame_core",
  "packages/universe_gen",
]


default-members = ["packages/server"]
