[package]
name = "orame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.2", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5.2", features = ["csr", "nightly"] }
leptos_router = { version = "0.5.2", features = ["csr", "nightly"] }
plotters = "0.3.5"
web-sys = { version = "0.3.65", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "HtmlElement"] }
ogame_core = { git = "https://github.com/Champii/ogame_core", branch = "master" }
# ogame_core = { path = "../../ogame_core" }
web-time = "0.2.3"
serde_cbor = "0.11.2"

# env_logger = "0.10.0"
futures = "0.3.28"
futures-util = "0.3.28"
# log = "0.4.20"
tokio = { version = "1.33.0", features = ["rt", "macros"], default-features = false }
ws_stream_wasm = "0.7.4"
pharos = "0.5.3"
serde = { version = "1.0.190", features = ["derive"] }
wasm-bindgen-futures = "0.4.30"
console_error_panic_hook = "0.1.7"
reqwest = { version = "0.11.22", features = ["json"] }
