[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.16", features = ["ws", "headers"] }
tokio = { version = "1.21.2", features = ["full"] }
axum-extra = { version = "0.8.0", features = ["cookie-private"] }
pretty_env_logger = "0.4"
futures = { version = "0.3"}
serde = { version = "1.0.147", features = ["derive"] }
serde_cbor = "0.11.2"
derive_more = "0.99.17"
log = "0.4.17"
ogame_core = { git = "https://github.com/Champii/ogame_core", branch = "release" }
# ogame_core = { path = "../../ogame_core" }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.4", features = ["fs", "trace"] }

prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.9" }
serde_json = "1.0.108"
jsonwebtoken = "9.1.0"
hyper = "0.14.27"
once_cell = "1.18.0"
dotenv = "0.15.0"
prisma-client = { path = "../prisma-client" }
http = "0.2.9"
